Fix a z-index issue where hero heading displayed on top of nav bar

--- a/_src/scss/_hero.scss
+++ b/_src/scss/_hero.scss
@@ -30,7 +30,7 @@
   margin: 1rem;
   max-width: 550px;
   padding: 0.5rem;
-  z-index: 5000;
+  z-index: 2;
 }
 
 .hero-caption {
